Fixes #291, Initial gap between images removed, image display made similar to market leader (#297)

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -146,7 +146,8 @@ a {
 }
 
 .grid {
-  padding-left: 80px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .responsive-image {
